# sylvan

./: .bazelrc  .clangd  .gitignore  BUILD  CODE_STYLE_GUIDE.md  MODULE.bazel  README.md  init_project.sh  项目介绍.md
examples/: BUILD  linear_regression.cc  number_translator.cc
sylvan/common/: BUILD
sylvan/common/include/sylvan/common/: debug.h
sylvan/core/: BUILD
sylvan/core/include/sylvan/core/: arena.h  attention.h  autograd.h  feed_forward.h  graph.h  layer.h  optimizer.h  position.h  transformer.h
sylvan/core/include/sylvan/core/layers/: embedding.h  layernorm.h  linear.h
sylvan/core/src/: arena.cc  autograd.cc  embedding.cc  graph.cc  layer.cc  optimizer.cc  position.cc  transformer.cc
sylvan/core/src/layers/: layernorm.cc  linear.cc
sylvan/infer/: BUILD
sylvan/tensor/: BUILD
sylvan/tensor/backend/cuda/: BUILD
sylvan/tensor/backend/cuda/include/: kernels.h  macros.h  operators-inl.h
sylvan/tensor/backend/cuda/src/: operators.cc  tensor.cc
sylvan/tensor/backend/cuda/src/cuda/: kernels.cu.cc
sylvan/tensor/include/sylvan/tensor/: operators.h  tensor.h
tests/core/: BUILD  autograd_test.cc
tests/tensor/: BUILD  tensor_test.cc
